--- a/trunk/templates/admin/globalsettings_uploads.template
+++ b/trunk/templates/admin/globalsettings_uploads.template
@@ -1,21 +1,21 @@
 <div style="padding-left:10px;" id="uploads">
    <!-- uploads enabled or disabled at all -->
    <div class="field">
-    <label for="config[uploads_enabled]">uploads_enabled</label>
+    <label for="config[uploads_enabled]">{$locale->tr("uploads_enabled")}</label>
     <div class="formHelp">{$locale->tr("help_uploads_enabled")}</div>
      <input class="radio" type="radio" name="config[uploads_enabled]" value="1" {if $uploads_enabled == 1 } checked="checked" {/if} />{$locale->tr("yes")}
      <input class="radio" type="radio" name="config[uploads_enabled]" value="0" {if $uploads_enabled == 0 } checked="checked" {/if} />{$locale->tr("no")}
    </div>
    <!-- maximum_file_upload_size -->
    <div class="field">
-    <label for="config[maximum_file_upload_size]">maximum_file_upload_size</label>
+    <label for="config[maximum_file_upload_size]">{$locale->tr("maximum_file_upload_size")}</label>
     <div class="formHelp">{$locale->tr("help_maximum_file_upload_size")}</div>
      <input style="width:100%" type="text" name="config[maximum_file_upload_size]" value="{$maximum_file_upload_size}"/>
     </td>
    </div>
    <!-- upload_forbidden_extensions -->
    <div class="field">
-    <label for="config[upload_forbidden_files]">upload_forbidden_files</label>
+    <label for="config[upload_forbidden_files]">{$locale->tr("upload_forbidden_files")}</label>
     <div class="formHelp">{$locale->tr("help_upload_forbidden_files")}</div>
     <input style="width:100%" type="text" name="config[upload_forbidden_files]" value="{$upload_forbidden_files}"/>
    </div>
